--- a/Pages/Farmacia/EditarArticulo.razor
+++ b/Pages/Farmacia/EditarArticulo.razor
@@ -119,14 +119,33 @@
 
     public void Guardar()
     {
-
-        if(ArticuloBLL.Guardar(this.articulo))
+        if(Validar())
         {
-            this.Nuevo();
-            ShowNotification(new NotificationMessage { Severity = NotificationSeverity.Success, Summary = "Registro Actualizado", Detail = "Guardado con Exito", Duration = 4000 });
+            if(ArticuloBLL.Guardar(this.articulo))
+            {
+                this.Nuevo();
+                ShowNotification(new NotificationMessage { Severity = NotificationSeverity.Success, Summary = "Registro Actualizado", Detail = "Guardado con Exito", Duration = 4000 });
+            }
         }
+        else
+        {
+            ShowNotification(new NotificationMessage { Severity = NotificationSeverity.Error, Summary = "Error de Registro", Detail = "Campos Vacios o mal asignados", Duration = 4000 });
 
+        }
         //Console.WriteLine("Campos no validos o no completados");
+    }
+
+        public bool Validar()
+        {
+        if(this.articulo.Descripcion != null && this.articulo.Costo != null && this.articulo.SuplidorId != null)
+        {
+            System.Console.WriteLine("Pase 1");
+                return true;
+        }
+        else
+        {
+            return false;
+        }
     }
 
 
