--- a/Pages/Registros/R_Emergencia.razor
+++ b/Pages/Registros/R_Emergencia.razor
@@ -1,4 +1,4 @@
-﻿@page "/R_Emergencia"
+@page "/R_Emergencia"
 <h1>Nueva Emergencia</h1>
 @inject NotificationService notificationService
 @inject EmergenciaBLL emergenciaBll
@@ -46,32 +46,33 @@
 </head>
 
 <body>
+<RadzenTemplateForm TItem="Emergencia" Data="emergencia" Submit="Guardar" >
 
 
-
-    <div class="RHeader" style="z-index: -1;">
-    </div>
 
 
     <div class="Form" style="z-index: 1;">
 
-           <div>
+            <div>
                 <br>
                 <div style="display: flex; justify-content: space-between;">
                     <div>
                         
-                        <RadzenDropDown  AllowClear="true" TValue="int"
+                        <RadzenDropDown  AllowClear="true" TValue="int" Name="Paciente"
                             FilterCaseSensitivity="FilterCaseSensitivity.CaseInsensitive" AllowFiltering="true"
                             class="w-100" Placeholder="Paciente"  Data="Paciente.GetList()" TextProperty="Cedula"
                             @bind-value=@emergencia.PacienteID ValueProperty="PacienteID" style="border-radius: 50px; background-color: #D9D9D9; border-color: #D9D9D9; border: 15px; margin: 5px;"
                             />
+                            <RadzenRequiredValidator Component="Paciente" Text="Nombre es Campo Requerido" Popup=true Style="position: absolute"/>
                             
                     </div>
 
                     <div style="display: flex;">
                         <div class="Entrada" style="display: flex;">
                             <RadzenLabel >Fecha</RadzenLabel>
-                            <RadzenDatePicker @bind-Value=@emergencia.Fecha ShowTime="true" HourFormat="12" DateFormat="MM/dd/yyyy h:mm tt" />
+                            <RadzenDatePicker @bind-Value=@emergencia.Fecha ShowTime="true" HourFormat="12" DateFormat="MM/dd/yyyy h:mm tt" Name="Fecha" />
+                            <RadzenRequiredValidator Component="Fecha" Text="Nombre es Campo Requerido" Popup=true Style="position: absolute"/>
+
                         </div>
                     </div>
                 </div>
@@ -84,6 +85,8 @@
         <div class="Entrada">
             <label for="M_Consulta">Motivo de Consulta:</label>
             <RadzenTextBox type="M_Consulta" id="M_Consulta" @bind-Value="emergencia.M_Consulta" name="M_Consulta"/>
+            <RadzenRequiredValidator Component="M_Consulta" Text="Nombre es Campo Requerido" Popup=true Style="position: absolute"/>
+
         </div>
 
         <div class="Entrada">
@@ -93,12 +96,12 @@
         <br>
         <div class="Entrada">
             <label for="A_Previas">Atenciones Previas:</label>
-            <RadzenTextBox @bind-value="emergencia.AtencionesPrevias"type="A_Previas" id="A_Previas" name="A_Previas"/>
+            <RadzenCheckBox @bind-Value=@AP Name="Atenciones" />
         </div>
 
         <div class="Entrada">
             <label for="Donde">Donde?</label>
-            <RadzenTextBox type="Donde" id="Donde" @bind-Value="emergencia.Donde" name="Donde"/>
+            <RadzenTextBox type="Donde" Disabled=@(!AP) id="Donde" @bind-Value="emergencia.Donde" name="Donde"/>
         </div>
 
         <div class="Entrada">
@@ -110,6 +113,8 @@
             <label for="Peso">Peso:</label>
             <RadzenNumeric  id="Peso" ShowUpDown="false" style="border-radius: 50px; background-color: #D9D9D9; border-color: #D9D9D9; border: 15px; margin: 5px;" 
             @bind-Value="emergencia.Peso" name="Peso"/>
+            <RadzenRequiredValidator Component="Peso" Text="Nombre es Campo Requerido" Popup=true Style="position: absolute"/>
+
             <label for="Peso">lbs</label>
         </div>
         <br>
@@ -118,15 +123,23 @@
             <label for="TA">TA:</label>
             <RadzenNumeric ShowUpDown="false" style="border-radius: 50px; background-color: #D9D9D9; border-color: #D9D9D9; border: 15px; margin: 5px;" 
             @bind-Value="emergencia.TA" name="TA"/>
+            <RadzenRequiredValidator Component="TA" Text="Nombre es Campo Requerido" Popup=true Style="position: absolute"/>
+
             <label for="FC">FC:</label>
             <RadzenNumeric  id="FR" ShowUpDown="false" style="border-radius: 50px; background-color: #D9D9D9; border-color: #D9D9D9; border: 15px; margin: 5px;" 
             @bind-Value="emergencia.FR" name="FR"/>
+            <RadzenRequiredValidator Component="FR" Text="Nombre es Campo Requerido" Popup=true Style="position: absolute"/>
+
             <label for="FR">FR</label>
             <RadzenNumeric  id="FC" ShowUpDown="false" style="border-radius: 50px; background-color: #D9D9D9; border-color: #D9D9D9; border: 15px; margin: 5px;" 
             @bind-Value="emergencia.FC" name="FC"/>
+            <RadzenRequiredValidator Component="FC" Text="Nombre es Campo Requerido" Popup=true Style="position: absolute"/>
+
             <label for="Temperatura">Temperatura:</label>
             <RadzenNumeric  id="Temperatura" ShowUpDown="false" style="border-radius: 50px; background-color: #D9D9D9; border-color: #D9D9D9; border: 15px; margin: 5px;" 
             @bind-Value="emergencia.Temperatura" name="Temperatura"/>
+            <RadzenRequiredValidator Component="Temperatura" Text="Nombre es Campo Requerido" Popup=true Style="position: absolute"/>
+
             <label for="Temperatura">C</label>
         </div>
 
@@ -142,6 +155,8 @@
             <div style="display: flex;">
                 <label for="Diagnostico">Diagnostico</label>
                 <RadzenTextArea style="width: 100%;"   id="Diagnostico" @bind-Value="emergencia.Diagnostico" name="Diagnostico"/>
+                <RadzenRequiredValidator Component="Diagnostico" Text="Nombre es Campo Requerido" Popup=true Style="position: absolute"/>
+
             </div>
         </div>
         </RadzenTabsItem>
@@ -182,16 +197,16 @@
     </div>
     </div>
     <center>
-        <button type="button" class="btn btn-primary"
-            style="padding-left: 50px;padding-right: 50px; border-radius:50px; Background-Color:#3AB5F4; border-color:#3AB5F4; margin:10px;"
-            @onclick="Guardar">Registrar</button>
+       <RadzenButton ButtonType="ButtonType.Submit" class="btn btn-primary" 
+            style="padding-left: 50px;padding-right: 50px; border-radius:50px; Background-Color:#3AB5F4; border-color:#3AB5F4; margin:10px;">Registrar</RadzenButton>
     </center>
-    
+  </RadzenTemplateForm >  
 </body>
 @code {
     public Emergencia emergencia { get; set; } = new Emergencia();
     public Paciente? paciente = new Paciente();
     public int id {get; set;}
+    bool AP {get;set;} 
 
     protected override void OnInitialized()
     {
