Adding reorden and Reports....

--- a/Pages/Suplidores/ConsultarSuplidor.razor
+++ b/Pages/Suplidores/ConsultarSuplidor.razor
@@ -76,32 +76,32 @@
 
 @code {
 
-    private List<Suplidor> Supliers {get; set;}
+    private List<Suplidor> Supliers {get; set;} = new List<Suplidor>();
     
 
     protected override void OnInitialized()
     {
         Supliers = Suplidor.GetList();
     }
-    byte[] reportData;
+    byte[]? reportData;
     string pdfContent = "";
     async Task ShowInlineDialog()
     {
         RptSuplidor rptResult = new RptSuplidor();
         reportData = rptResult.Report(Supliers);
         pdfContent = "data:application/pdf;base64, " + System.Convert.ToBase64String(reportData);
-        var result = await Dialog.OpenAsync("Reporte de Jugadas", ds =>
+        var result = await Dialog.OpenAsync("Reporte de Jugadas", ds => @<div>
 
-    @<div>
+            @if (reportData is { })
+                {
+                    <object data="@pdfContent" width="800px" height="300px" name="_blank" />
 
-        @if (reportData is { })
-            {
-                <object data="@pdfContent" width="800px" height="300px" name="_blank" />
-
-            }
+                }
 
         </div>
     , new DialogOptions() { Width = "850px", Height = "400px", Resizable = false, Draggable = false });
+
+    
 
     }
 }
