--- a/Shared/MainLayout.razor
+++ b/Shared/MainLayout.razor
@@ -56,11 +56,18 @@
                         <RadzenPanelMenuItem  Text="Reporte" Path="" />
                     </RadzenPanelMenuItem>
 
-                    <RadzenPanelMenuItem style="background-color:#28363c;" Text="Farmacia" >
+                    <RadzenPanelMenuItem style="background-color:#28363c;" Text="Suministros" >
                         <RadzenPanelMenuItem  Text="Inventario" Path="Inventario" />
                         <RadzenPanelMenuItem  Text="Agregar" Path="R_Articulo" />
                         <RadzenPanelMenuItem  Text="Entrada" Path="Entradas" />
                         <RadzenPanelMenuItem  Text="Salida" Path="Salidas" />
+                    </RadzenPanelMenuItem>
+
+
+                    <RadzenPanelMenuItem style="background-color:#28363c;" Text="Pedidos" >
+                        <RadzenPanelMenuItem  Text="Articulos en reorden" Path="Reorden" />
+                        <RadzenPanelMenuItem  Text="Realizar orden de compra" Path="R_Compras" />
+                        
                     </RadzenPanelMenuItem>
 
                     <RadzenPanelMenuItem style="background-color:#28363c;" Text="Suplidores" >
