--- a/Pages/Registros/R_Emergencia.razor
+++ b/Pages/Registros/R_Emergencia.razor
@@ -279,7 +279,7 @@
 
         public bool Validar()
         {
-            if(this.emergencia.PacienteID !=null && this.emergencia.M_Consulta !=null && this.emergencia.AtencionesPrevias !=null && this.emergencia.Peso!=null &&this.emergencia.TA !=null && this.emergencia.FC !=null && this.emergencia.FR !=null && this.emergencia.Temperatura !=null &&  this.emergencia.Diagnostico !=null &&  this.emergencia.Fecha !=null )
+            if(this.emergencia.PacienteID !=null && this.emergencia.M_Consulta !=null  && this.emergencia.Peso!=null &&this.emergencia.TA !=null && this.emergencia.FC !=null && this.emergencia.FR !=null && this.emergencia.Temperatura !=null &&  this.emergencia.Diagnostico !=null &&  this.emergencia.Fecha !=null )
             {
                 System.Console.WriteLine("Pase 1");
                     return true;
