--- a/Pages/Registros/R_EmergenciaA.razor
+++ b/Pages/Registros/R_EmergenciaA.razor
@@ -309,7 +309,7 @@
 
             public bool Validar()
         {
-            if(this.emergencia.PacienteID !=null && this.emergencia.M_Consulta !=null && this.emergencia.AtencionesPrevias !=null && this.emergencia.Peso!=null &&this.emergencia.TA !=null && this.emergencia.FC !=null && this.emergencia.FR !=null && this.emergencia.Temperatura !=null &&  this.emergencia.Diagnostico !=null &&  this.emergencia.Fecha !=null &&  this.emergencia.ARS !=null &&  this.emergencia.NSS!=null )
+            if(this.emergencia.PacienteID !=null && this.emergencia.M_Consulta !=null  && this.emergencia.Peso!=null &&this.emergencia.TA !=null && this.emergencia.FC !=null && this.emergencia.FR !=null && this.emergencia.Temperatura !=null &&  this.emergencia.Diagnostico !=null &&  this.emergencia.Fecha !=null &&  this.emergencia.ARS !=null &&  this.emergencia.NSS!=null )
             {
                 System.Console.WriteLine("Pase 1");
                     return true;
