--- a/Shared/MainLayout.razor
+++ b/Shared/MainLayout.razor
@@ -67,6 +67,7 @@
                     <RadzenPanelMenuItem style="background-color:#28363c;" Text="Pedidos" >
                         <RadzenPanelMenuItem  Text="Articulos en reorden" Path="Reorden" />
                         <RadzenPanelMenuItem  Text="Realizar orden de compra" Path="R_Compras" />
+                        <RadzenPanelMenuItem  Text="Consulta compras" Path="C_Compra" />
                         
                     </RadzenPanelMenuItem>
 
